--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    user-select: none;
 }
 body,html{
     overflow: hidden;
