--- a/src/Pages/Main/Main.scss
+++ b/src/Pages/Main/Main.scss
@@ -177,6 +177,8 @@ $board-bg:#F5F5F5;
             padding: .7em 1em;
             border-radius: 10px;
             margin-bottom: .5em;
+            transition: all 300ms;
+            border: 1px solid transparent;
             .content{
               margin-left: 1em;
               .title{
@@ -205,6 +207,9 @@ $board-bg:#F5F5F5;
               display: grid;
               place-items: center;
               cursor: pointer;
+            }
+            &:hover{
+              border: 1px solid black;
             }
           }
         }
